-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 6u18
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2186296 | 6u19 | Abhijit Saha | P2 | Resolved | Fixed | b01 |
Security warning icon is not getting displayed properly for tooltip.
Reproducible on windows XP from 6u18b03 build onwards
To Reproduce the problem:
1. Run Toplevel factory.jar
2. click Display Security warning
3. Click button Show toplevel
4. Hover the mouse over the window to see the tooltip and then
move the mouse over the tooltip
5. Observe the Security warning icon is not seen .
The tooltip's icon is seen with some artifacts once the mouse is moved away from the frame
Reproducible on windows XP from 6u18b03 build onwards
To Reproduce the problem:
1. Run Toplevel factory.jar
2. click Display Security warning
3. Click button Show toplevel
4. Hover the mouse over the window to see the tooltip and then
move the mouse over the tooltip
5. Observe the Security warning icon is not seen .
The tooltip's icon is seen with some artifacts once the mouse is moved away from the frame
- backported by
-
JDK-2186296 Security warning icon is not getting displayed properly for tooltip
-
- Resolved
-
- relates to
-
JDK-6825342 Security warning may change Z-order of top-level
-
- Closed
-