6900622: Security warning icon is not getting displayed properly for tooltip

Pass a correct value for the hWndInsertAfter argument to the ::SetWindowPos() function

Reviewed-by: art, dcherepanov